edit navbar and changed fonts

--- a/html/collections.html
+++ b/html/collections.html
@@ -10,15 +10,13 @@
       crossorigin="anonymous"
     />
     <link href="/css/home.css" type="text/css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <title>woolawoola</title>
   </head>
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <a class="navbar-brand active">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="/html/home.html">
         <img
           src="/image/logo.png"
           width="30"
@@ -27,7 +25,7 @@
           alt="Logo"
           loading="lazy"
         />
-        woola woola <span class="sr-only">(current)</span>
+        woola woola
       </a>
       <button
         class="navbar-toggler"
@@ -43,59 +41,63 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/html/story.html">THE STORY</a>
-          <a class="nav-link" href="/html/collections.html">OUR COLLECTIONS</a>
+          <a class="nav-link active">OUR COLLECTIONS <span class="sr-only">(current)</span></a>
           <a class="nav-link" href="/html/contact.html">CONTACT US</a>
         </div>
       </div>
     </nav>
 
-    <!-- Hero Image -->
-    <div class="banner">
-      <img src="/image/banner.jpg" class="img-fluid" alt="Banner">
-    </div>
-
-    <!-- Brand Description -->
-    <div class="description">
-      <p class="para-top">
-        Woola woola is a celebration of the seasons we have in our lifetime.
-      </p>
-      <p>
-        With every hurdle, with every wave, dress it up, look at it
-        differently.
-      </p>
-      <p class="para-top">Have fun, be free, stay classy.</p>
-      <p class="para-last">#iamwoolawoola</p>
-    </div>
-
-    <!-- The Story 
+    <!-- Classic -->
     <div class="container story">
       <div class="row">
-        <div class="col-4">
+        <div class="col-6">
           <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
         </div>
-        <div class="col-8">
-          <div>THE STORY</div>
-          <div>Just like you, we have an undying love for accessories and we want to share it with the world.</div>
-          <button type="button" class="btn btn-primary">ABOUT US</button>
+        <div class="col-6">
+          <div>The Classic</div>
+          <div>(Insert description here)</div>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <!-- Our Collections 
-    <div class="container story">
-      <div class="row">
-        <div class="col-8">
-          <div>OUR COLLECTIONS</div>
-          <div>
-            We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
+     <!-- Knotting -->
+     <div class="container story">
+        <div class="row">
+          <div class="col-6">
+            <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
           </div>
-          <button type="button" class="btn btn-primary">VIEW COLLECTIONS</button>
-        </div>
-        <div class="col-4">
-          <img src="/image/collection-thumbnail.png" width="300" height="300" alt="Our Collections">
+          <div class="col-6">
+            <div>Knotting</div>
+            <div>(Insert description here)</div>
+          </div>
         </div>
       </div>
-    </div>-->
+
+       <!-- Stone -->
+    <div class="container story">
+        <div class="row">
+          <div class="col-6">
+            <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
+          </div>
+          <div class="col-6">
+            <div>Stone</div>
+            <div>(Insert description here)</div>
+          </div>
+        </div>
+      </div>
+
+       <!-- Bubble -->
+    <div class="container story">
+        <div class="row">
+          <div class="col-6">
+            <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
+          </div>
+          <div class="col-6">
+            <div>Bubble</div>
+            <div>(Insert description here)</div>
+          </div>
+        </div>
+      </div>
 
     <!-- Footer -->
     <footer>
