--- a/html/home.html
+++ b/html/home.html
@@ -67,30 +67,32 @@
     </div>
 
     <!-- The Story -->
-    <div class="container story">
+    <div class="container container-custom">
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4">
           <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
         </div>
-        <div class="col-8">
-          <div>THE STORY</div>
-          <div>Just like you, we have an undying love for accessories and we want to share it with the world.</div>
-          <button type="button" class="btn btn-primary">ABOUT US</button>
+        <div class="col-md-8">
+          <h5 class="title-space">THE STORY</h5>
+          <p class="para-last">Just like you, we have an undying love for accessories and we want to share it with the world.</p>
+          <button type="button" class="btn btn-primary btn-custom">
+            <a href="story.html">ABOUT US</a>
+            </button>
         </div>
       </div>
     </div>
 
     <!-- Our Collections -->
-    <div class="container story">
+    <div class="container container-custom">
       <div class="row">
-        <div class="col-8">
-          <div>OUR COLLECTIONS</div>
-          <div>
+        <div class="col-md-8">
+          <h5 class="title-space">OUR COLLECTIONS</h5>
+          <p class="para-last">
             We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
-          </div>
-          <button type="button" class="btn btn-primary">VIEW COLLECTIONS</button>
+          </p>
+          <button type="button" class="btn btn-primary btn-custom"><a href="collections.html">VIEW OUR COLLECTIONS</a></button>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
           <img src="/image/collection-thumbnail.png" width="300" height="300" alt="Our Collections">
         </div>
       </div>
@@ -98,10 +100,14 @@
 
     <!-- Footer -->
     <footer>
-      <div>
-        <p>CONTACT US</p>
-        <a href="#">Facebook</a><br>
-        <a href="#">Instagram</a>
+      <div class="footer">
+        <h6>CONTACT US</h6>
+        <a href="https://www.facebook.com/woolawoola.sg">
+          <img src="/image/fb-logo.png" height="50px" width="50px" alt="FB link">
+        </a>
+        <a href="https://www.instagram.com/woola.woola/">
+          <img src="/image/ig-logo.png" height="45px" width="45px" alt="IG link">
+        </a>
       </div>
     </footer>
 
