--- a/html/story.html
+++ b/html/story.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <a class="navbar-brand active hb-align" href="/html/home.html">
+      <a class="navbar-brand active hb-align" href="/html/index.html">
         <img
           src="/image/logo.png"
           width="30"
