edited collections page

--- a/html/index.html
+++ b/html/index.html
@@ -93,7 +93,7 @@
           <button type="button" class="btn btn-primary btn-custom"><a href="collections.html">VIEW OUR COLLECTIONS</a></button>
         </div>
         <div class="col-md-4">
-          <img src="/image/collection-thumbnail.png" width="300" height="300" alt="Our Collections">
+          <img src="/image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections">
         </div>
       </div>
     </div>
