--- a/html/collections.html
+++ b/html/collections.html
@@ -49,32 +49,35 @@
     </nav>
 
     <!-- Classic -->
-    <div class="container story">
+    <div class="container">
       <div class="row">
-        <div class="col-6">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="col-md-8">
+          <div id="carousel-classic" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/banner.jpg" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/image/collection-thumbnail.png" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/image/story-banner.JPG" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carousel-classic" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carousel-classic" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-4">
           <div>The Classic</div>
           <div>(Insert description here)</div>
         </div>
@@ -82,39 +85,108 @@
     </div>
 
      <!-- Knotting -->
-     <div class="container story">
-        <div class="row">
-          <div class="col-6">
-            <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
-          </div>
-          <div class="col-6">
-            <div>Knotting</div>
-            <div>(Insert description here)</div>
+     <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <div id="carousel-knotting" class="carousel slide" data-ride="carousel" data-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel-knotting" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-knotting" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
+        <div class="col-md-4">
+          <div>The Classic</div>
+          <div>(Insert description here)</div>
+        </div>
       </div>
+    </div>
 
        <!-- Stone -->
-    <div class="container story">
+       <div class="container">
         <div class="row">
-          <div class="col-6">
-            <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
+          <div class="col-md-8">
+            <div id="carousel-stone" class="carousel slide" data-ride="carousel" data-interval="false">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carousel-stone" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel-stone" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
-          <div class="col-6">
-            <div>Stone</div>
+          <div class="col-md-4">
+            <div>The Classic</div>
             <div>(Insert description here)</div>
           </div>
         </div>
       </div>
 
-       <!-- Bubble -->
-    <div class="container story">
+       <!-- Bubbly -->
+       <div class="container">
         <div class="row">
-          <div class="col-6">
-            <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
+          <div class="col-md-8">
+            <div id="carousel-bubbly" class="carousel slide" data-ride="carousel" data-interval="false">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carousel-bubbly" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel-bubbly" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
-          <div class="col-6">
-            <div>Bubble</div>
+          <div class="col-md-4">
+            <div>The Classic</div>
             <div>(Insert description here)</div>
           </div>
         </div>
