--- a/html/collections.html
+++ b/html/collections.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <a class="navbar-brand active hb-align" href="/html/index.html">
+      <a class="navbar-brand active hb-align" href="/index.html">
         <img
           src="/image/logo.png"
           width="30"
@@ -55,16 +55,16 @@
           <div id="carousel-classic" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic1.png" class="d-block w-100" alt="Classic 1">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic2.png" class="d-block w-100" alt="Classic 2">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic3.png" class="d-block w-100" alt="Classic 3">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+                <img src="/image/classic/classic4.png" class="d-block w-100" alt="Classic 4">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-classic" role="button" data-slide="prev">
@@ -91,16 +91,16 @@
           <div id="carousel-knotting" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+                <img src="/image/knotting/knotting1.png" class="d-block w-100" alt="Knotting 1">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+                <img src="/image/knotting/knotting2.png" class="d-block w-100" alt="Knotting 2">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+                <img src="/image/knotting/knotting3.png" class="d-block w-100" alt="Knotting 3">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+                <img src="/image/knotting/knotting4.png" class="d-block w-100" alt="Knotting 4">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-knotting" role="button" data-slide="prev">
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div>The Classic</div>
+          <div>Knotting</div>
           <div>(Insert description here)</div>
         </div>
       </div>
@@ -127,16 +127,16 @@
             <div id="carousel-stone" class="carousel slide" data-ride="carousel" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+                  <img src="/image/stone/stone1.png" class="d-block w-100" alt="Stone 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+                  <img src="/image/stone/stone2.png" class="d-block w-100" alt="Stone 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
+                  <img src="/image/stone/stone3.png" class="d-block w-100" alt="Stone 3">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+                  <img src="/image/stone/stone4.png" class="d-block w-100" alt="Stone 4">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel-stone" role="button" data-slide="prev">
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div>The Classic</div>
+            <div>Stone</div>
             <div>(Insert description here)</div>
           </div>
         </div>
@@ -163,16 +163,13 @@
             <div id="carousel-bubbly" class="carousel slide" data-ride="carousel" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/image/classic/classic1.png" class="d-block w-100" alt="...">
+                  <img src="/image/bubbly/bubbly1.png" class="d-block w-100" alt="Bubbly 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/classic/classic2.png" class="d-block w-100" alt="...">
+                  <img src="/image/bubbly/bubbly2.png" class="d-block w-100" alt="Bubbly 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/classic/classic3.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/image/classic/classic4.png" class="d-block w-100" alt="...">
+                  <img src="/image/bubbly/bubbly3.png" class="d-block w-100" alt="Bubbly 3">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel-bubbly" role="button" data-slide="prev">
@@ -186,7 +183,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div>The Classic</div>
+            <div>Bubbly</div>
             <div>(Insert description here)</div>
           </div>
         </div>
