--- a/html/collections.html
+++ b/html/collections.html
@@ -11,7 +11,7 @@
     <link href="/style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-    <title>woolawoola</title>
+    <title>Collection</title>
   </head>
 
   <body>
@@ -55,13 +55,13 @@
           <div id="carousel-classic" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/classic/classic1.png" class="d-block w-100" alt="Classic 1">
+                <img src="/image/classic/classic3.png" class="d-block w-100" alt="Classic 1">
               </div>
               <div class="carousel-item">
                 <img src="/image/classic/classic2.png" class="d-block w-100" alt="Classic 2">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic3.png" class="d-block w-100" alt="Classic 3">
+                <img src="/image/classic/classic1.png" class="d-block w-100" alt="Classic 3">
               </div>
               <div class="carousel-item">
                 <img src="/image/classic/classic4.png" class="d-block w-100" alt="Classic 4">
@@ -78,8 +78,9 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div>The Classic</div>
-          <div>(Insert description here)</div>
+          <h1>The Classic</h1>
+          <p>The original bestseller. Our Classic range brings you back in time to an earlier period, yet gives you an elegant look that is suitable for any occasion and fashion. Combines well with modern wear, to give a classy look.</p>
+          <p>Comes in dangle form.</p>
         </div>
       </div>
     </div>
@@ -114,8 +115,9 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div>Knotting</div>
-          <div>(Insert description here)</div>
+          <h1>Knotting</h1>
+          <p>Hand made to perfection, the Knotting Collection is an artwork of fine form. It is a blend of traditional fashion with a zest of chic. A hot favourite during Chinese New Year season and suitable to be worn with traditional costumes.</p>
+          <p>Available as a stud, dangle style or hoop.</p>
         </div>
       </div>
     </div>
@@ -150,8 +152,9 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div>Stone</div>
-            <div>(Insert description here)</div>
+            <h1>Stone</h1>
+            <p>The Stone range embodies nature in art. Obtained from natural sources, the stones are metamorphic in nature and are carefully polished for extra resistance against humidity and moist. </p>
+            <p>Available in dangle and hoop.</p>
           </div>
         </div>
       </div>
@@ -183,8 +186,9 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div>Bubbly</div>
-            <div>(Insert description here)</div>
+            <h1>Bubbly</h1>
+            <p>The latest range in our whole collection. As the name implies, Bubbly is suitable for those with a bubbly and carefree personality. </p>
+            <p>Limited availability.</p>
           </div>
         </div>
       </div>
