--- a/html/story.html
+++ b/html/story.html
@@ -11,7 +11,7 @@
     <link href="/style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-    <title>woolawoola</title>
+    <title>The Story</title>
   </head>
 
   <body>
