--- a/html/contact.html
+++ b/html/contact.html
@@ -62,10 +62,15 @@
 
     <!-- Footer -->
     <footer>
-      <div>
-        <p>CONTACT US</p>
-        <a href="#">Facebook</a><br>
-        <a href="#">Instagram</a>
+      <div class="footer">
+        <h6>CONTACT US</h6>
+        <a href="https://www.facebook.com/woolawoola.sg">
+          <img src="/image/facebook.png" height="45px" width="45px" alt="FB link">
+        </a>
+        <a href="https://www.instagram.com/woola.woola/">
+          <img src="/image/instagram.png" height="35px" width="65px" alt="IG link">
+        </a>
+        <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
       </div>
     </footer>
 
