--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <link href="/style.css" type="text/css" rel="stylesheet" />
+    <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <title>Woola Woola</title>
@@ -58,7 +58,7 @@
       <p class="para-top">
         Woola woola is a celebration of the seasons we have in our lifetime.
       </p>
-      <p>
+      <p class="para-mid">
         With every hurdle, with every wave, dress it up, look at it
         differently.
       </p>
@@ -73,10 +73,10 @@
           <img src="/image/story-thumbnail.png" width="300" height="300" alt="The Story">
         </div>
         <div class="col-md-8">
-          <h5 class="title-space">THE STORY</h5>
+          <h2 class="title-space">THE STORY</h2>
           <p class="para-last">Just like you, we have an undying love for accessories and we want to share it with the world.</p>
           <button type="button" class="btn btn-primary btn-custom">
-            <a href="story.html">ABOUT US</a>
+            <a href="/html/story.html">ABOUT US</a>
             </button>
         </div>
       </div>
@@ -86,11 +86,11 @@
     <div class="container container-custom">
       <div class="row">
         <div class="col-md-8">
-          <h5 class="title-space">OUR COLLECTIONS</h5>
+          <h2 class="title-space">OUR COLLECTIONS</h2>
           <p class="para-last">
             We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
           </p>
-          <button type="button" class="btn btn-primary btn-custom"><a href="collections.html">VIEW OUR COLLECTIONS</a></button>
+          <button type="button" class="btn btn-primary btn-custom"><a href="/html/collections.html">VIEW OUR COLLECTIONS</a></button>
         </div>
         <div class="col-md-4">
           <img src="/image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections">
@@ -103,11 +103,12 @@
       <div class="footer">
         <h6>CONTACT US</h6>
         <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="/image/fb-logo.png" height="50px" width="50px" alt="FB link">
+          <img src="/image/facebook.png" height="45px" width="45px" alt="FB link">
         </a>
         <a href="https://www.instagram.com/woola.woola/">
-          <img src="/image/ig-logo.png" height="45px" width="45px" alt="IG link">
+          <img src="/image/instagram.png" height="35px" width="65px" alt="IG link">
         </a>
+        <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
       </div>
     </footer>
 
