--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <link href="style.css" rel="stylesheet" />
+    <link href="/style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <title>Contact Us</title>
@@ -17,9 +17,9 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <a class="navbar-brand active hb-align" href="index.html">
+      <a class="navbar-brand active hb-align" href="/index.html">
         <img
-          src="image/logo.png"
+          src="/image/logo.png"
           width="30"
           height="30"
           class="d-inline-block align-top"
@@ -41,8 +41,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="html/story.html">THE STORY</a>
-          <a class="nav-link" href="html/collections.html">OUR COLLECTIONS</a>
+          <a class="nav-link" href="/html/story.html">THE STORY</a>
+          <a class="nav-link" href="/html/collections.html">OUR COLLECTIONS</a>
           <a class="nav-link">CONTACT US <span class="sr-only">(current)</span></a>
         </div>
       </div>
@@ -65,10 +65,10 @@
       <div class="footer">
         <h6>CONTACT US</h6>
         <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
+          <img src="/image/facebook.png" height="45px" width="45px" alt="FB link">
         </a>
         <a href="https://www.instagram.com/woola.woola/">
-          <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
+          <img src="/image/instagram.png" height="35px" width="65px" alt="IG link">
         </a>
         <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
       </div>
