--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="navbar-nav">
           <a class="nav-link" href="html/story.html">THE STORY</a>
           <a class="nav-link" href="html/collections.html">OUR COLLECTIONS</a>
-          <a class="nav-link" href="html/contact.html">CONTACT US</a>
+          <a class="nav-link" href="contact.html">CONTACT US</a>
         </div>
       </div>
     </nav>
