Moved all html files to root folder

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="html/story.html">THE STORY</a>
-          <a class="nav-link" href="html/collections.html">OUR COLLECTIONS</a>
+          <a class="nav-link" href="story.html">THE STORY</a>
+          <a class="nav-link" href="collections.html">OUR COLLECTIONS</a>
           <a class="nav-link" href="contact.html">CONTACT US</a>
         </div>
       </div>
