Completed The Story

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="col-md-8">
           <h2 class="title-space">THE STORY</h2>
-          <p class="para-last">Just like you, we have an undying love for accessories and we want to share it with the world.</p>
+          <p class="para-last">Just like you, we have an undying love for accessorized earrings and we want to share it with the world.</p>
           <button type="button" class="btn btn-primary btn-custom">
             <a href="html/story.html">ABOUT US</a>
             </button>
@@ -97,19 +97,20 @@
         </div>
       </div>
     </div>
+  </body>
 
-    <!-- Footer -->
-    <footer>
-      <div class="footer">
-        <h6>CONTACT US</h6>
-        <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
-        </a>
-        <a href="https://www.instagram.com/woola.woola/">
-          <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
-        </a>
-        <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
-      </div>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <div class="footer">
+      <h6>CONTACT US</h6>
+      <a href="https://www.facebook.com/woolawoola.sg">
+        <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
+      </a>
+      <a href="https://www.instagram.com/woola.woola/">
+        <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
+      </a>
+      <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
+    </div>
+  </footer>
 
 </html>
