--- a/collections.html
+++ b/collections.html
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           <h1 class="title-space">The Classic</h1>
           <p class="para-last">The original bestseller. Our Classic range brings you back in time to an earlier period, yet gives you an elegant look that is suitable for any occasion and fashion. Combines well with modern wear, to give a classy look.</p>
-          <p class="sentence-end">Comes in dangle form.</p>
+          <p class="para-mid">Comes in dangle form.</p>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
         <div class="col-md-4">
           <h1 class="title-space">Knotting</h1>
           <p class="para-last">Hand made to perfection, the Knotting Collection is an artwork of fine form. It is a blend of traditional fashion with a zest of chic. A hot favourite during Chinese New Year season and suitable to be worn with traditional costumes.</p>
-          <p class="sentence-end">Available as a stud, dangle style or hoop.</p>
+          <p class="para-mid">Available as a stud, dangle style or hoop.</p>
         </div>
       </div>
     </div>
@@ -154,7 +154,7 @@
           <div class="col-md-4">
             <h1 class="title-space">Stone</h1>
             <p class="para-last">The Stone range embodies nature in art. Obtained from natural sources, the stones are metamorphic in nature and are carefully polished for extra resistance against humidity and moist. </p>
-            <p class="sentence-end">Available in dangle and hoop.</p>
+            <p class="para-mid">Available in dangle and hoop.</p>
           </div>
         </div>
       </div>
@@ -188,23 +188,24 @@
           <div class="col-md-4">
             <h1 class="title-space">Bubbly</h1>
             <p class="para-last">The latest range in our whole collection. As the name implies, Bubbly is suitable for those with a bubbly and carefree personality. </p>
-            <p class="sentence-end">Limited availability.</p>
+            <p class="para-mid">Limited availability.</p>
           </div>
         </div>
       </div>
+  </body>
 
-    <!-- Footer -->
-    <footer>
-      <div class="footer">
-        <h6>CONTACT US</h6>
-        <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
-        </a>
-        <a href="https://www.instagram.com/woola.woola/">
-          <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
-        </a>
-        <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
-      </div>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <div class="footer">
+      <h6>CONTACT US</h6>
+      <a href="https://www.facebook.com/woolawoola.sg">
+        <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
+      </a>
+      <a href="https://www.instagram.com/woola.woola/">
+        <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
+      </a>
+      <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
+    </div>
+  </footer>
 
 </html>
