--- a/contact.html
+++ b/contact.html
@@ -48,30 +48,25 @@
       </div>
     </nav>
 
-    <!-- Our Vision -->
-    <div class="centred-container">
-      <p>Keep in touch.</p>
-      <p>(Insert form here)</p>
-      <div>
-        <a href="#">Facebook</a><br>
-        <a href="#">Instagram</a>
-      </div>
+    <!-- Contact Us -->
+    <div class="d-flex flex-column bd-highlight mb-3 form">
+      <div class="p-2 bd-highlight">Flex item 1</div>
+      <div class="p-2 bd-highlight">Flex item 2</div>
     </div>
+  </body>
 
-
-
-    <!-- Footer -->
-    <footer>
-      <div class="footer">
-        <h6>CONTACT US</h6>
-        <a href="https://www.facebook.com/woolawoola.sg">
+  <!-- Footer -->
+  <footer>
+    <div class="footer">
+      <h6>CONTACT US</h6>
+      <a href="https://www.facebook.com/woolawoola.sg">
           <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
-        </a>
-        <a href="https://www.instagram.com/woola.woola/">
+      </a>
+      <a href="https://www.instagram.com/woola.woola/">
           <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
-        </a>
-        <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
-      </div>
-    </footer>
+      </a>
+      <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
+    </div>
+  </footer>
 
 </html>
