--- a/story.html
+++ b/story.html
@@ -49,41 +49,47 @@
     </nav>
 
     <!-- Story Banner -->
-    <div class="centred-container">
+    <div class="banner">
       <img src="image/story-banner.jpg" class="img-fluid" alt="Story Banner">
     </div>
 
     <!-- Our Vision -->
-    <div class="centred-container">
-      <p>Have fun, be free, stay classy.</p>
-      <p>That is our vision for our customers. We want you to live life as you want, enjoy it, yet at the same time remain elegant. Let our accessories be the epitome of this statement. Wear it.</p>
+    <div class="description">
+      <h1 class="title-space">Have fun, be free, stay classy.</h1>
+      <p class="para-mid">That is the vision for our customers.</p>
+      <p class="para-mid">We want you to live life as you want, enjoy it, yet remain elegant.</p>
+      <p class="para-last">Wear woola woola.</p>
     </div>
 
     <!-- The Story -->
-    <div class="container story">
+    <div class="container container-custom">
       <div class="row">
-        <div class="col-4">
-          <img src="image/story-thumbnail.png" width="300" height="300" alt="The Story">
+        <div class="col-lg-4">
+          <img src="image/jean-tan.png" width="320" height="400" alt="The Story">
         </div>
-        <div class="col-8">
-          <div>Our Founder, Jean Tan</div>
-          <div>(Insert story here)</div>
+        <div class="col-lg-8">
+          <h2>Jean Tan</h2>
+          <h5 class="title-space">Founder</h5>
+          <p class="title-space">Jean started off by exploring different ways of making accessorized earrings due to her love of wearing them. Coming from a family that has various artistic talents and background, she sought help from her mother and sister to start up a small handcrafted earring business. She believes that women should be as carefree as can be. Hence, she hopes to inspire this belief to others through the concept of her products.</p>
+          <p><i>"There is nothing more to life than living the best one you can ever live. Regardless of all the stumbling blocks you encounter in your life, take all of them as a lesson learnt and move along. It is always better late than never!</i></p>
+          <p><i>- Jean"</i></p>
         </div>
       </div>
     </div>
+  </body>
 
-    <!-- Footer -->
-    <footer>
-      <div class="footer">
-        <h6>CONTACT US</h6>
-        <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
-        </a>
-        <a href="https://www.instagram.com/woola.woola/">
-          <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
-        </a>
-        <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
-      </div>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <div class="footer">
+      <h6>CONTACT US</h6>
+      <a href="https://www.facebook.com/woolawoola.sg">
+        <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
+      </a>
+      <a href="https://www.instagram.com/woola.woola/">
+        <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
+      </a>
+      <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
+    </div>
+  </footer>
 
 </html>
