--- a/story.html
+++ b/story.html
@@ -50,7 +50,7 @@
 
     <!-- Story Banner -->
     <div class="banner">
-      <img src="image/story-banner.jpg" class="img-fluid" alt="Story Banner">
+      <img src="image/story-banner.png" class="img-fluid" alt="Story Banner">
     </div>
 
     <!-- Our Vision -->
