--- a/collections.html
+++ b/collections.html
@@ -80,7 +80,7 @@
         <div class="col-md-4">
           <h1 class="title-space">The Classic</h1>
           <p class="para-last">The original bestseller. Our Classic range brings you back in time to an earlier period, yet gives you an elegant look that is suitable for any occasion and fashion. Combines well with modern wear, to give a classy look.</p>
-          <p class="para-mid">Comes in dangle form.</p>
+          <p class="para-mid">Available in dangles.</p>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
         <div class="col-md-4">
           <h1 class="title-space">Knotting</h1>
           <p class="para-last">Hand made to perfection, the Knotting Collection is an artwork of fine form. It is a blend of traditional fashion with a zest of chic. A hot favourite during Chinese New Year season and suitable to be worn with traditional costumes.</p>
-          <p class="para-mid">Available as a stud, dangle style or hoop.</p>
+          <p class="para-mid">Available as studs, dangles or hoops.</p>
         </div>
       </div>
     </div>
@@ -154,7 +154,7 @@
           <div class="col-md-4">
             <h1 class="title-space">Stone</h1>
             <p class="para-last">The Stone range embodies nature in art. Obtained from natural sources, the stones are metamorphic in nature and are carefully polished for extra resistance against humidity and moist. </p>
-            <p class="para-mid">Available in dangle and hoop.</p>
+            <p class="para-mid">Available as dangles and hoops.</p>
           </div>
         </div>
       </div>
