--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,29 @@
 
     <!-- Contact Us -->
     <div class="d-flex flex-column bd-highlight mb-3 form">
-      <div class="p-2 bd-highlight">Flex item 1</div>
-      <div class="p-2 bd-highlight">Flex item 2</div>
+      <div class="p-2 bd-highlight">
+        <h3>Contact Us</h3>
+        <p>If you have any queries, feel free to drop us a mail. Our customer service team will reply within 3 working days.</p>
+      </div>
+      <div class="p-2 bd-highlight">
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="input-name">Name</label>
+              <input type="text" class="form-control" id="input-name">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="input-email">Email</label>
+              <input type="email" class="form-control" id="input-email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="input-message">Send us a message!</label>
+            <textarea class="form-control" id="input-message" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary btn-custom">Send</button>
+        </form>
+      </div>
     </div>
   </body>
 
