--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- Hero Image -->
     <div class="banner">
-      <img src="image/banner.jpg" class="img-fluid" alt="Banner">
+      <img src="image/banner.png" class="img-fluid" alt="Banner">
     </div>
 
     <!-- Brand Description -->
@@ -69,10 +69,10 @@
     <!-- The Story -->
     <div class="container container-custom">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4">
           <img src="image/story-thumbnail.png" width="300" height="300" alt="The Story">
         </div>
-        <div class="col-md-8">
+        <div class="col-lg-8">
           <h2 class="title-space">THE STORY</h2>
           <p class="para-last">Just like you, we have an undying love for accessorized earrings and we want to share it with the world.</p>
           <button type="button" class="btn btn-primary btn-custom">
@@ -85,14 +85,14 @@
     <!-- Our Collections -->
     <div class="container container-custom">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg-8">
           <h2 class="title-space">OUR COLLECTIONS</h2>
           <p class="para-last">
             We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
           </p>
           <button type="button" class="btn btn-primary btn-custom"><a href="html/collections.html">VIEW OUR COLLECTIONS</a></button>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4">
           <img src="image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections">
         </div>
       </div>
