missed out links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <h2 class="title-space">THE STORY</h2>
           <p class="para-last">Just like you, we have an undying love for accessorized earrings and we want to share it with the world.</p>
           <button type="button" class="btn btn-primary btn-custom">
-            <a href="html/story.html">ABOUT US</a>
+            <a href="story.html">ABOUT US</a>
             </button>
         </div>
       </div>
@@ -90,7 +90,7 @@
           <p class="para-last">
             We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
           </p>
-          <button type="button" class="btn btn-primary btn-custom"><a href="html/collections.html">VIEW OUR COLLECTIONS</a></button>
+          <button type="button" class="btn btn-primary btn-custom"><a href="collections.html">VIEW OUR COLLECTIONS</a></button>
         </div>
         <div class="col-lg-4">
           <img src="image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections">
