--- a/collections.html
+++ b/collections.html
@@ -11,6 +11,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/logo.png" type="image/gif" sizes="16x16">
     <title>Collection</title>
   </head>
 
@@ -51,8 +52,8 @@
     <!-- Classic -->
     <div class="container container-custom">
       <div class="row">
-        <div class="col-md-8">
-          <div id="carousel-classic" class="carousel slide" data-ride="carousel" data-interval="false">
+        <div class="col-md-8 image-center">
+          <div id="carousel-classic" class="carousel slide container-content" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="image/classic/classic3.png" class="d-block w-100" alt="Classic 1">
@@ -80,7 +81,7 @@
         <div class="col-md-4">
           <h1 class="title-space">The Classic</h1>
           <p class="para-last">The original bestseller. Our Classic range brings you back in time to an earlier period, yet gives you an elegant look that is suitable for any occasion and fashion. Combines well with modern wear, to give a classy look.</p>
-          <p class="para-mid">Available in dangles.</p>
+          <p class="para-mid">Available as dangles.</p>
         </div>
       </div>
     </div>
@@ -88,8 +89,8 @@
      <!-- Knotting -->
      <div class="container container-custom2">
       <div class="row">
-        <div class="col-md-8">
-          <div id="carousel-knotting" class="carousel slide" data-ride="carousel" data-interval="false">
+        <div class="col-md-8 image-center">
+          <div id="carousel-knotting" class="carousel slide container-content" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="image/knotting/knotting1.png" class="d-block w-100" alt="Knotting 1">
@@ -125,8 +126,8 @@
        <!-- Stone -->
        <div class="container container-custom">
         <div class="row">
-          <div class="col-md-8">
-            <div id="carousel-stone" class="carousel slide" data-ride="carousel" data-interval="false">
+          <div class="col-md-8 image-center">
+            <div id="carousel-stone" class="carousel slide container-content" data-ride="carousel" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="image/stone/stone1.png" class="d-block w-100" alt="Stone 1">
@@ -162,8 +163,8 @@
        <!-- Bubbly -->
        <div class="container container-custom2">
         <div class="row">
-          <div class="col-md-8">
-            <div id="carousel-bubbly" class="carousel slide" data-ride="carousel" data-interval="false">
+          <div class="col-md-8 image-center">
+            <div id="carousel-bubbly" class="carousel slide container-content" data-ride="carousel" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="image/bubbly/bubbly1.png" class="d-block w-100" alt="Bubbly 1">
