--- a/story.html
+++ b/story.html
@@ -11,6 +11,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/logo.png" type="image/gif" sizes="16x16">
     <title>The Story</title>
   </head>
 
@@ -64,8 +65,8 @@
     <!-- The Story -->
     <div class="container container-custom">
       <div class="row">
-        <div class="col-lg-4">
-          <img src="image/jean-tan.png" width="320" height="400" alt="The Story">
+        <div class="col-lg-4 image-center">
+          <img src="image/jean-tan.png" width="320" height="400" alt="The Story" class="container-content">
         </div>
         <div class="col-lg-8">
           <h2>Jean Tan</h2>
