--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/logo.png" type="image/gif" sizes="16x16">
     <title>Contact Us</title>
   </head>
 
