--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/logo.png" type="image/gif" sizes="16x16">
     <title>Woola Woola</title>
   </head>
 
@@ -69,10 +70,10 @@
     <!-- The Story -->
     <div class="container container-custom">
       <div class="row">
-        <div class="col-lg-4">
-          <img src="image/story-thumbnail.png" width="300" height="300" alt="The Story">
+        <div class="col-lg-4 image-center">
+          <img src="image/story-thumbnail.png" width="300" height="400" alt="The Story" class="container-content">
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-8 container-content">
           <h2 class="title-space">THE STORY</h2>
           <p class="para-last">Just like you, we have an undying love for accessorized earrings and we want to share it with the world.</p>
           <button type="button" class="btn btn-primary btn-custom">
@@ -85,15 +86,15 @@
     <!-- Our Collections -->
     <div class="container container-custom">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 container-content">
           <h2 class="title-space">OUR COLLECTIONS</h2>
           <p class="para-last">
             We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
           </p>
           <button type="button" class="btn btn-primary btn-custom"><a href="collections.html">VIEW OUR COLLECTIONS</a></button>
         </div>
-        <div class="col-lg-4">
-          <img src="image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections">
+        <div class="col-lg-4 image-center">
+          <img src="image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections" class="container-content">
         </div>
       </div>
     </div>
