adjust container alignments

--- a/collections.html
+++ b/collections.html
@@ -78,7 +78,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 container-content">
           <h1 class="title-space">The Classic</h1>
           <p class="para-last">The original bestseller. Our Classic range brings you back in time to an earlier period, yet gives you an elegant look that is suitable for any occasion and fashion. Combines well with modern wear, to give a classy look.</p>
           <p class="para-mid">Available as dangles.</p>
@@ -115,7 +115,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 container-content">
           <h1 class="title-space">Knotting</h1>
           <p class="para-last">Hand made to perfection, the Knotting Collection is an artwork of fine form. It is a blend of traditional fashion with a zest of chic. A hot favourite during Chinese New Year season and suitable to be worn with traditional costumes.</p>
           <p class="para-mid">Available as studs, dangles or hoops.</p>
@@ -152,7 +152,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 container-content">
             <h1 class="title-space">Stone</h1>
             <p class="para-last">The Stone range embodies nature in art. Obtained from natural sources, the stones are metamorphic in nature and are carefully polished for extra resistance against humidity and moist. </p>
             <p class="para-mid">Available as dangles and hoops.</p>
@@ -186,7 +186,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 container-content">
             <h1 class="title-space">Bubbly</h1>
             <p class="para-last">The latest range in our whole collection. As the name implies, Bubbly is suitable for those with a bubbly and carefree personality. </p>
             <p class="para-mid">Limited availability.</p>
