--- a/story.html
+++ b/story.html
@@ -68,7 +68,7 @@
         <div class="col-lg-4 image-center">
           <img src="image/jean-tan.png" width="320" height="400" alt="The Story" class="container-content">
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-8 container-content">
           <h2>Jean Tan</h2>
           <h5 class="title-space">Founder</h5>
           <p class="title-space">Jean started off by exploring different ways of making accessorized earrings due to her love of wearing them. Coming from a family that has various artistic talents and background, she sought help from her mother and sister to start up a small handcrafted earring business. She believes that women should be as carefree as can be. Hence, she hopes to inspire this belief to others through the concept of her products.</p>
